k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ez-book-web
  namespace: ez-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ez-book-web
  template:
    metadata:
      labels:
        app: ez-book-web
    spec:
      containers:
        - name: web
          image: ghcr.io/mkmonkeycat/ez-book-purchase-application:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
