k8s/manifest.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: ez-book-purchase-env
#   namespace: ez-book
# type: Opaque
# stringData:
#   GOOGLE_SHEETS_SPREADSHEET_ID: "REPLACE_ME"
#   GOOGLE_SHEETS_LOGS_SPREADSHEET_ID: "REPLACE_ME"
#   GOOGLE_SHEETS_CLIENT_EMAIL: "REPLACE_ME"
#   GOOGLE_SHEETS_PRIVATE_KEY: "REPLACE_ME"
# ---
apiVersion: v1
kind: Service
metadata:
  name: ez-book-purchase
  namespace: ez-book
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ez-book-purchase-application
    app.kubernetes.io/instance: ez-book-purchase
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ez-book-purchase
  namespace: ez-book
  labels:
    app.kubernetes.io/name: ez-book-purchase-application
    app.kubernetes.io/instance: ez-book-purchase
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ez-book-purchase-application
      app.kubernetes.io/instance: ez-book-purchase
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ez-book-purchase-application
        app.kubernetes.io/instance: ez-book-purchase
    spec:
      containers:
        - name: ez-book-purchase-application
          image: ghcr.io/mkmonkeycat/ez-book-purchase-application:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
