k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ez-book-web
  namespace: ez-book
spec:
  selector:
    app: ez-book-web
  ports:
    - name: http
      port: 80
      targetPort: http
